[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phpypamobjects"
version = "0.1.9"
description = "A high level API client library for phpIPAM.  This library wraps the phpypam library with higher level objects representing phpIPAM abstractions like addresses, subnets and scan agents"
readme = "README.md"
authors = [
    {name = "Guillermo Pérez Trabado", email = "guille@ac.uma.es"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9.2"
dependencies = [
    "numpy>=1.19.5",
    "phpypam>=1.0.2",
    "python-nmap>=0.7.1",
]
license =  "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/gpt-uma/phpypamobjects"
Documentation = "https://github.com/gpt-uma/phpypamobjects/blob/main/README.md"
Issues = "https://github.com/gpt-uma/phpypamobjects/issues"
